update README file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,8 +82,10 @@
   /* secondary page hero */
   .hero-secondary {
       margin: 20px;
-      background-color: white;
-      font-size: 20pns;
+      background-color: black;
+      font-size: 20px;
+      color: red;
+
       color: blue;
   }
   /* Hero Style End */
