--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,17 +51,18 @@
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
   }
   
   footer h2 {
-    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
   }
   
   footer div {
-    float: right;
     line-height: 1.5;
     text-align: right;
   }
@@ -98,11 +99,12 @@
     border: 3px solid #024e76;
     background-color: #fce138;
     padding: 20px;
-    width: 500px;
+    width: 40%;
     color: #024e76;
     position: absolute;
     bottom: 120px;
     right: 140px;
+    margin: 3.5%;
   }
   
   .hero-form h3 {
@@ -135,6 +137,20 @@
     font-size: 16px;
   }
   
+  .hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+  }
+
+  .hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
+  }
   .intro {
     text-align: center;
   }
