--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,11 +99,12 @@ section {
 .hero {
   background-image: url('../images/hero-bg.jpg');
   background-size: cover;
-  background-position: center;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   align-items: flex-start;
+  background-attachment: fixed;
+  background-position: 80%;
 }
 
 .hero-cta {
@@ -124,13 +125,17 @@ section {
 
 .hero-form {
   border: 3px solid #024e76;
-  background-color: #fce138;
+  background-color: rgba(255, 255, 56, 0.8);
   padding: 20px;
   color: #024e76;
   width: 40%;
   margin: 3.5%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.hero-form button:hover {
+  background-color: #39a6b2;
 }
 
 .hero-form h3 {
@@ -525,10 +530,6 @@ section {
     color: #024e76;
     border-radius: 25px;
     text-shadow: none;
-  }
-
-  .hero-form button:hover {
-    background-color: #39a6b2;
   }
 
   .contact-form button:hover {
