additional css updates

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,13 @@ header nav ul li a {
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+header nav ul li a:hover {
+  background: #fce138;
+  color: #024e76;
+  border-radius: 25px;
+  text-shadow: none;
+}
+
 /* HEADER / NAVBAR STYLES END */
 
 
@@ -359,10 +366,12 @@ section {
   margin-bottom: 15px;
   margin-top: 5px;
   border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.75);
 }
 
 .contact-form input:focus, .contact-form textarea:focus {
-
+  background-color: rgba(255, 255, 255, 1);
+  outline: none;
 }
 
 .step:nth-child(even) {
@@ -378,6 +387,11 @@ section {
   padding: 15px 0;
   font-size: 16px;
   border-radius: 10px;
+}
+
+.contact-form button:hover {
+  color: #fce138;
+  background: #39a6b2;
 }
 
 .contact-info a {
@@ -476,6 +490,10 @@ section {
     .step-text {
       flex: 100%;
     }
+
+    .trainer-bio h3, .trainer-bio h4 {
+      display: block;
+    }
   }
 
   @media screen and (max-width: 575px) {
@@ -525,14 +543,6 @@ section {
     background: blue;
   }
 
-  header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
-    border-radius: 25px;
-    text-shadow: none;
-  }
+  
 
-  .contact-form button:hover {
-    color: #fce138;
-    background: #39a6b2;
-  }
+  
